@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/11/01 21:42:37 jdolecek Exp $
+$NetBSD: distinfo,v 1.2 2004/11/27 13:33:52 jdolecek Exp $
 
-SHA1 (pear/HTTP_Request-1.2.tgz) = 9cffc219a05e606091988c6278d5293196a764e5
-Size (pear/HTTP_Request-1.2.tgz) = 11856 bytes
+SHA1 (pear/HTTP_Request-1.2.3.tgz) = 7138699d7da3e2ceacbbc1e6634f8f4bdbdf9f73
+Size (pear/HTTP_Request-1.2.3.tgz) = 12823 bytes
